# jobez-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: interview_agent.py  job_match_agent.py  resume_agent.py
app/api/: deps.py
app/api/v1/: applications.py  auth.py  dashboard.py  health.py  interviews.py  jobs.py  profile.py  router.py
app/core/: enums.py  exceptions.py  logging.py  security.py
app/db/: session.py
app/llm/: client.py  schemas.py
app/middleware/: correlation_id.py  error_handler.py  logging_middleware.py  rate_limiter.py
app/models/: __init__.py  application.py  bookmark.py  interview.py  job.py  profile.py  user.py
app/prompts/: interview_evaluation.py  interview_question.py  job_match.py  resume_parse.py
app/schemas/: application.py  auth.py  common.py  dashboard.py  interview.py  job.py  profile.py  user.py
app/services/: application_service.py  auth_service.py  cloudinary_service.py  dashboard_service.py  interview_service.py  job_service.py  profile_service.py  token_service.py  user_service.py
app/tasks/: scoring.py
app/vectordb/: client.py  collections.py  embeddings.py
docs/: auth-api.md  jobs-api.md  profile-onboarding-api.md
migrations/: env.py
migrations/versions/: 1fa07e0b34e7_add_profile_fields_preferred_role_.py  ae2ae4399a6d_initial.py  b7f3a1c92e45_change_date_fields_from_string_to_date.py  c1e2f3a4b5d6_drop_company_from_jobs.py
